fixed #4 I was using the wrong position value

--- a/UC alert tool/Content/SettingsStyle.css
+++ b/UC alert tool/Content/SettingsStyle.css
@@ -30,14 +30,14 @@
 }
 @media (min-width: 768px) {
   .sidebar {
-    position: relative;
+    position: absolute;
     width: 200px;
     margin-top: 0px;
     float:left;
     margin-right:15px;
   }
 }
-/*End of sidebar*/
+/*End of sidebar*/  
 .settingsContentWrapper{
     margin-left:250px;
 }
